@@ -43,3 +43,11 @@ You will need to set up a MySQL database with a table conforming to the
 schema given within the code. Once done, LDAP gives a read-only view of the
 database with only the filter "(uid=<foo>)" supported.
 
+Example 3: preforking server
+----------------------------
+
+This functions in the same way as rbslapd1.rb. However, since each query is
+answered in a separate process, the YAML file on disk is used as the master
+repository. Update operations re-write this file each time.
+
+
